<resources>
    <string name="app_name">Walk Walk Revolution</string>
    <string name="action_settings">Settings</string>
    <string name="steps_walked">Steps Walked Today:</string>
    <string name="distance_walked">Distance Walked Today:</string>
    <string name="routes_button">Routes</string>
    <string name="add_routes_button">Add New Route</string>
    <string name="test_num">0</string>
    <string name="height_prompt">Enter Height in Inches</string>
    <string name="confirm_prompt">Confirm</string>
    <string name="mock_step_button">Mock Step/Time</string>
    <string name="team_button">My Team</string>
    <string name="team_routes_button">Team Routes</string>

    <string name="name_text">Name</string>
    <string name="start_text">Start</string>
    <string name="step_text">Step</string>
    <string name="run_type1">Loop</string>
    <string name="run_type2">Out-and-Back</string>
    <string name="flat_hilly1">Flat</string>
    <string name="flat_hilly2">Hilly</string>
    <string name="route_type1">Streets</string>
...
    <string name="surface_type1">Even</string>
    <string name="surface_type2">Uneven</string>
    <string name="difficulity1">Easy</string>
    <string name="difficulity2">Moderate</string>
    <string name="difficulity3">Hard</string>
    <string name="note_field">Note</string>
    <string name="save_button">Save Route</string>
    <string name="favorite_button">Favorite</string>
    <string name="checkmark">\u2713</string>

    <string name="success_height_msg">Height Successfully Updated</string>
    <string name="error_height_msg">Please enter a valid Height</string>
    <string name="title_activity_routes_list">Routes</string>

    <string name="routeTitle">New Route</string>
    <string name="walkStopButton">Stop</string>

    <string name="start_button">Start!</string>
    <string name="welcome_message">Welcome to Walk Walk Revolution!</string>
    <string name="stop_button">Stop Session</string>
    <string name="update_button">Update Steps/Distance</string>
    <string name="mock_step_key">MOCK_STEPS</string>
    <string name="mock_time_key">MOCK_TIMES</string>
    <string name="mock_shared_pref_key">MOCK_SHARED_PREF</string>
    <string name="token_shared_pref_key">TOKEN_SHARED_PREF</string>
    <string name="token_key">TOKEN</string>
...
